Version 0.6.3 (2012-12-XX)
--------------------------
JS tracker: bumped to 0.8.2                                  -- DONE
JS tracker: each event now sent with an event type `e` (#63) -- DONE
JS tracker: refactoring of event definition code             -- DONE
JS tracker: added attachUserId(boolean) method (#92)         -- DONE
Serde: bumped to 0.5.3                                       -- DONE
Serde: now extracts event type (`e`) from querystring (#63)  --
Serde: now attaches UUID event_id to each event (#89)        --
Serde: added support for IP address override in querystring (#90) --
HiveQL: hive-rolling-etl.q bumped to 0.5.2                     -- DONE
HiveQL: non-hive-rolling-etl.q bumped to 0.0.4                 -- DONE
HiveQL: event and event_id now extracted from Serde (#63, #89) -- DONE
EmrEtlRunner: updated config file template                     -- DONE

Version 0.6.2 (2012-11-29)
--------------------------
JS tracker: bumped to 0.8.1
JS tracker: fixed bug with trailing comma (#102)
JS tracker: removed console.log when not debugging (#101)
JS tracker: removed minified sp.js from version control (added .gitignore to keep it out)
SnowCannon: bumped submodule to latest shermozle/SnowCannon commit

Version 0.6.1 (2012-11-28)
--------------------------
JS tracker: bumped to 0.8.0
JS tracker: rename ice.png to i - BREAKING CHANGE (#29)
JS tracker: added setCollectorCf() and deprecated setAccount() (#32)
JS tracker: Tracker constructor now supports Cf or Url (part of #44)
JS tracker: getTrackerCf() and -Url() added, getTracker() deprecated (part of #44)
JS tracker: added tracker version (`tv`) to querystring (#41)
JS tracker: added color depth tracking (part of #69)
JS tracker: added timezone tracking (part of #69)
JS tracker: added user fingerprinting (#70)
JS tracker: broke out .js into multiple files (#55)
EmrEtlRunner: bumped to 0.0.6
EmrEtlRunner: --skip takes multiple args (part of #83, supercedes #80)